--- a/src/Components/TechFlex.css
+++ b/src/Components/TechFlex.css
@@ -30,23 +30,27 @@ button.onetoOneButton {
   display: flex;
   flex-direction: row;
   flex-grow: 1;
+  flex-shrink: 1;
 }
 .HorGameElement {
   flex-grow: 1;
+  flex-shrink: 1;
   height: 100%;
   background-color: khaki;
-  border-width: 0.5%;
+  border-width: 0.2%;
   border-style: solid;
 }
 .VertGame {
   height: 100%;
   display: flex;
   flex-direction: column;
+  flex-shrink: 1;
 }
 .VertGameCont {
   display: flex;
   flex-direction: column;
   height: 100%;
+  flex-shrink: 1;
 }
 button.VertGameButton {
   height: 20%;
