--- a/src/Components/Profile.css
+++ b/src/Components/Profile.css
@@ -16,12 +16,12 @@ button.leftSided:hover {
   margin-left: 1%;
 }
 .leftProfile {
-  width: 10%;
+  width: 7%;
   height: 100%;
   background-color: black;
 }
 .leftProfileExtended {
-  width: 40%;
+  width: 30%;
   height: 100%;
   background-color: black;
   word-wrap: break-word;
@@ -39,18 +39,49 @@ button.xButton {
 }
 .aboutMeContainer {
   color: #ffff;
-  margin-left: 2%;
   display: flex;
   flex-direction: column;
   height: 100%;
+  align-items: stretch;
+  justify-content: center;
 }
 .imgContainer {
-  flex-grow: 1;
+  flex-grow: 10;
   flex-shrink: 1;
   width: 80%;
-  margin-left: 10%;
-  background-color: blueviolet;
+  margin-left: 3vw;
+  margin-bottom: 1vw;
+  background-image: url('./postDrip.png');
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 h3 {
-  font-size: 2vw;
+  font-size: 1.4vw;
+  margin-left: 3vw;
+}
+p {
+  font-size: 1.2vw;
+  text-align: justify;
+  word-wrap: break-word;
+  margin: 3%;
+  color: #000;
+}
+.textCont {
+  height: auto;
+  border-style: solid;
+  border-radius: 1%;
+  border-width: 1%;
+  background-color: orange;
+  flex-grow: 1;
+}
+.flexCarrier {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+.separator {
+  flex-grow: 1;
+  flex-shrink: 1;
+  width: 100%;
+  background-color: blanchedalmond;
 }
