--- a/src/Components/TechFlex.css
+++ b/src/Components/TechFlex.css
@@ -1,7 +1,10 @@
 .TechFlexCont {
-  background-color: blueviolet;
   flex-shrink: 1;
   height: 100%;
+  background-color: orange;
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
 }
 h1.FlexHeader {
   font-size: 2vw;
@@ -55,4 +58,42 @@ button.onetoOneButton {
 button.VertGameButton {
   height: 20%;
   width: 100%;
+}
+.poweredBy {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  height: 100%;
+  flex-shrink: 1;
+}
+.TechCard {
+  width: 10vw;
+  height: 10vw;
+  border-color: blanchedalmond;
+  border-style: solid;
+  border-radius: 3%;
+  background-color: black;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.PoweredByHeader {
+  width: 100%;
+  height: auto;
+}
+h1.PoweredByText {
+  font-size: 6vw;
+}
+.TechCardCover {
+  height: 90%;
+  width: 90%;
+  background-color: brown;
+  margin: 5%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 10;
+}
+.TechCardCover:hover {
+  height: 95%;
+  width: 95%;
+  margin: 2.5%;
 }
